=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 v1.102 - In Development

=over

=item *

Can now bundle L<Krang::List> data with your element library, and have
it imported when the database is created (in the same fashion as
C<templates.kds>).  The file is C<lists.kds>.  [Peter]

=item *

Added C<slug> as a variable available to all templates at
publish-time.  This was intended to be there all along, but somehow
fell through the cracks.  [Peter]

=item *

L<Krang::ElementClass::ListGroup> now handles multidimensional lists
of arbitrary depth.  Further testing is needed, but so far things look
good.  [Peter Leonard, Andrea Bonotto]

=item *

Fixed a bug in L<Krang::DataSet> with loading compressed C<.kds.gz> files
and added a test for it.  Also fixed bug in dataset.t where it was not
skipping all the tests that need TestSet1 when TestSet1 is not available
[Perrin]

=item *

Fixed a bug in L<Krang::List> - default sort order for C<find> was by
C<name>, it is now by C<parent_list_id>.  [Peter]

=item *

Added tutorial documentation on how to use Lists in an element library. [Peter]

=item *

Changed HTML in templates to use C<text> rather than C<textfield> in form 
inputs. [Perrin]

=item *

Updated several modules: DBI to 1.47, WWW-Mechanize to 1.10,
URI to 1.35, and libwww-perl to 5.803. [Perrin]

=item *

Added C<bin/krang_addon_framework> - a new script to create a
supporting framework to simplify development of Krang addons. [Peter]

=item *

Added C<--rebuild> option to C<bin/krang_build> allowing it to build modules
even if there an existing Krang build there already. [Perrin]

=back

=head2 v1.101 - January 20, 2005

=over

=item *

Added C<--not_on_desk> option to C<bin/krang_publish> - limiting
publishing to checked-in items that are not on any desk. [Michael Peters]

=item *

Fixed a bug in L<Krang::Schedule> - cleanup of the C<tmp/> directory
was not being done properly.  This is now fixed. [Peter]
