@@ -8,6 +8,11 @@ This document contains a list of changes for each release of Krang.
 
 =item *
 
+Fixes to the import process as it affects L<Krang::ListItem>
+objects - list orders are now preserved properly.  [Peter]
+
+=item *
+
 Can now bundle L<Krang::List> data with your element library, and have
 it imported when the database is created (in the same fashion as
 C<templates.kds>).  The file is C<lists.kds>.  [Peter]
